--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+.cropper-container {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+
+.cropper {
+  width: 100%;
+  height: 100%;
+}
